# rust-backend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: main.yml
src/: main.rs  models.rs
templates/: index.html  posts.html
